--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,5 +4,18 @@
 }
 
 .sub-title {
-    color: #1499ef
+    color: #1499ef;
+    font-weight: bolder;
+    text-shadow: black 2px 2px 2px;
+}
+
+.font {
+    font-family: American Typewriter, serif	;
+    font-size: larger;
+}
+
+.background-image {
+    background: url(./assets/background.jpg);
+    background-size: cover;
+    height: fit-content;
 }
