--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,5 +18,10 @@
 .background-image {
     background: url(./assets/bucket.jpg);
     background-size: cover;
-    height: fit-content;
+    /* width: 100vw;
+    height: 100vh; */
+}
+
+.font-weight-bold {
+    font-weight: bolder;
 }
