--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,9 +19,20 @@
     background: url(./assets/bucket.jpg);
     background-size: cover;
     /* width: 100vw;
-    height: 100vh; */
+    height: fit-content; */
 }
 
 .font-weight-bold {
     font-weight: bolder;
+}
+
+.bucket-position {
+    position: relative;
+}
+
+.bucket-text-position {
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
