minor style changes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 .link-white-no-decor {
     color: black;
-    text-decoration: none;
+    /* text-decoration: none; */
     font-weight: bolder;
 }
 
